--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="text">
               <div id="code">
             <font color="#FF0000">    
-<span class="say"><h1>Happy birthday 2 giờ sáng </h1></span><br><br>
+<span class="say"><h1>Happy birthday 2AM </h1></span><br><br>
 <span class="say">Hôm nay sinh nhật cậu</span><br> <br>    
 <span class="say">mình chẳng có quà gì đâu</span><br><br>
 <span class="say">Chỉ có vài lời viết</span><br><br>
